update the sln and update the nuget package and adding the DbContext class

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  
+  "ConnectionStrings": {
+    "DefaultConnection":"Data source=store.db"
   }
 }
